# bare-metal-manager-core

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  STYLE_GUIDE.md
.github/workflows/: build-boot-artifacts.yml  ci.yaml  docker-build.yml
bluefield/: Makefile.toml
bluefield/charts/carbide-dhcp-server/: Chart.yaml  values.yaml
bluefield/charts/carbide-dpu-agent/: Chart.yaml  values.yaml
bluefield/charts/carbide-dpu-otel-agent/: Chart.yaml  values.schema.json  values.yaml
bluefield/charts/carbide-otelcol/: Chart.yaml  values.yaml
bluefield/containers/forge-dhcp-server/: Dockerfile
bluefield/containers/forge-dpu-agent/: Dockerfile
bluefield/containers/forge-dpu-otel-agent/: Dockerfile
bluefield/containers/otelcol-contrib/: Dockerfile
bluefield/misc/DEBIAN/: control
bluefield/misc/site-controller/: otel-agent.service
bluefield/otel/puntstatsreceiver/: config.go
bluefield/otel/scripts/: otel_copy_certs.sh
book/src/: SUMMARY.md  hcl.md
book/src/design/: spiffe-svid-sdd.md
book/src/manuals/: building_bmm_containers.md  site-setup.md
crates/admin-cli/src/: main.rs  rpc.rs
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: command_line.rs  dhcp_server_grpc_client.rs  ethernet_virtualization.rs  health.rs  host_machine_id.rs  lib.rs  main_loop.rs  managed_files.rs  nvue.rs
crates/agent/templates/: nvue_startup_etv.conf  nvue_startup_fnn.conf
crates/api/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-db/migrations/: 20250714145741_compute_allocations.sql  20260213082014_vpc_status_fix_pre.sql  20260304032808_vpc_status_fix_post.sql  20260305120000_rack_health_report_overrides.sql  20260310024920_rack_firmware_apply_history.sql  20260310120000_delete_machine_logparser_health.sql  20260311022301_delete_hardware_health_health_column.sql  20260311092600_change_agent_upgrade_policy.sql  20260311120000_dpf_enabled_nullable.sql  20260313120000_expected_power_shelves_switches_id.sql
crates/api-db/src/: compute_allocation.rs  dhcp_record.rs  expected_machine.rs  expected_power_shelf.rs  expected_rack.rs  expected_switch.rs  ib_partition.rs  instance.rs  instance_address.rs  instance_type.rs  ip_allocator.rs  lib.rs  machine.rs  machine_validation_suites.rs  power_shelf.rs  rack.rs  rack_firmware.rs  rack_state_history.rs  vpc_peering.rs  vpc_prefix.rs  work_lock_manager.rs
crates/api-db/src/attestation/: spdm.rs
crates/api-db/src/sql/: managed_hosts.sql.template
crates/api-integration-tests/: Cargo.toml
crates/api-integration-tests/tests/: lib.rs
crates/api-model/src/: expected_machine.rs  expected_power_shelf.rs  expected_rack.rs  expected_switch.rs  hardware_info.rs  lib.rs  network_prefix.rs  rack.rs  rack_firmware.rs  vpc.rs
crates/api-test-helper/: Cargo.toml
crates/api-test-helper/src/: api_server.rs  utils.rs
crates/api/src/: api.rs  auth.rs  db_init.rs  dpf.rs  dynamic_settings.rs  errors.rs  ethernet_virtualization.rs  ipmitool.rs  ipxe.rs  lib.rs  listener.rs  main.rs  nv_redfish.rs  nvlink.rs  periodic_timer.rs  redfish.rs  run.rs  setup.rs
crates/api/templates/: base.html  compute_allocation_detail.html  compute_allocation_show.html  machine_health.html
crates/bmc-explorer/: Cargo.toml
crates/bmc-explorer-cli/: Cargo.toml
crates/bmc-explorer-cli/src/: main.rs
crates/bmc-explorer/src/: chassis.rs  computer_system.rs  error.rs  inventories.rs  lib.rs  manager.rs  network_adapter.rs
crates/bmc-explorer/tests/: bluefield3_explore.rs  dell_poweredge_r750_explore.rs  nvidia_switch_explore.rs  powershelf_explore.rs  wiwynn_gb200_explore.rs
crates/bmc-mock/: Cargo.toml
crates/bmc-mock/src/: bmc_state.rs  lib.rs  machine_info.rs  main.rs  mock_machine_router.rs  tls.rs
crates/bmc-mock/src/hw/: bluefield3.rs  dell_poweredge_r750.rs  liteon_power_shelf.rs  mod.rs  nic.rs  nvidia_switch_nd5200_ld.rs  wiwynn_gb200_nvl.rs
crates/bmc-mock/src/redfish/: assembly.rs  computer_system.rs  manager.rs  mod.rs  resource.rs  sensor.rs  service_root.rs  storage.rs
crates/bmc-mock/src/redfish/oem/: mod.rs
crates/bmc-mock/src/redfish/oem/nvidia/: bluefield.rs
crates/bmc-mock/src/test_support/: axum_http_client.rs  mod.rs
crates/bmc-vendor/src/: lib.rs
crates/dhcp-server/: Cargo.toml  build.rs
crates/dhcp-server/proto/: dhcp_server_control.proto
crates/dhcp-server/src/: command_line.rs  grpc_server.rs  main.rs  util.rs
crates/dpf/files/: bf.cfg
crates/dpf/src/: sdk.rs  types.rs
crates/dpu-otel-agent/src/: command_line.rs  (+1 more)
crates/dsx-exchange-consumer/: Cargo.toml  README.md
crates/health/: Cargo.toml  build.rs
crates/health/benches/: collector_pipeline.rs  processor_pipeline.rs  sink_pipeline.rs
crates/health/example/: config.example.toml
crates/health/src/: api_client.rs  config.rs  lib.rs
crates/health/src/collectors/: logs.rs  nmxt.rs  runtime.rs  sensors.rs
crates/health/src/collectors/logs/: mod.rs  periodic.rs  sse.rs
crates/health/src/collectors/sensors/: mod.rs
crates/health/src/discovery/: cleanup.rs  context.rs  spawn.rs
crates/health/src/otlp/: convert.rs  drain.rs  mod.rs
crates/health/src/processor/: health_report.rs  leak_events.rs  mod.rs
crates/health/src/sink/: event_mapper.rs  events.rs  health_override.rs  log_file.rs  mod.rs  otlp.rs  override_queue.rs  prometheus.rs  rack_health_override.rs  tracing.rs
crates/kms-provider/: Cargo.toml
crates/network/: Cargo.toml
crates/rpc/: Cargo.toml  build.rs
crates/rpc/proto/: common.proto  forge.proto  health.proto
crates/rpc/src/: admin_cli.rs  errors.rs  forge_tls_client.rs  lib.rs
crates/sbom/: README.md
crates/secrets/: Cargo.toml
crates/secrets/src/: chained_reader.rs  credentials.rs  forge_vault.rs  lib.rs
crates/secrets/src/local_credentials/: env.rs  file.rs  mod.rs
crates/ssh-console-mock-api-server/: Cargo.toml
crates/ssh-console-mock-api-server/src/: lib.rs
docs/: release-notes.md
helm/: PREREQUISITES.md  README.md
helm/examples/: values-full.yaml  values-minimal.yaml
pxe/: Makefile.toml
pxe/common_files/: load_modules.sh
pxe/templates/: user-data
(+288 files in other folders)
