#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-api-db"
version = "0.0.0"
edition.workspace = true
description = "Database functions for carbide-api"
license.workspace = true
authors.workspace = true

[lib]
name = "db"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
config-version = { path = "../config-version", features = ["sqlx"] }
carbide-host-support = { path = "../host-support", default-features = false }
carbide-libmlx = { path = "../libmlx" }
carbide-network = { path = "../network", features = ["sqlx"] }
carbide-version = { path = "../version" }
carbide-health-report = { path = "../health-report" }
carbide-rpc = { path = "../rpc", features = ["sqlx"] }
carbide-utils = { path = "../utils", features = ["sqlx"] }
carbide-uuid = { path = "../uuid", features = ["sqlx"] }
carbide-measured-boot = { path = "../measured-boot", features = ["sqlx"] }
dns-record = { path = "../dns-record" }
carbide-api-model = { path = "../api-model", default-features = false }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
async-trait = { workspace = true }
chrono = { workspace = true }
domain = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
names = { default-features = false, workspace = true }
octseq = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "mac_address",
    "ipnetwork",
    "uuid",
    "migrate",
    "postgres",
    "chrono",
    "macros",
    "json",
] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }
hickory-proto = { workspace = true }
version-compare = { workspace = true }
#these are alphabetized

[build-dependencies]
carbide-version = { path = "../version" }

[dev-dependencies]
lazy_static = { workspace = true }
carbide-macros = { path = "../macros" }
carbide-sqlx-testing = { path = "../sqlx-testing" }
tracing-subscriber = { workspace = true }
ctor = { workspace = true }

[lints]
workspace = true
