#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-api-integration-tests"
version = "0.0.0"
edition.workspace = true
description = "Integration tests for carbide-api"
license.workspace = true
authors.workspace = true

[dev-dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
carbide-machine-a-tron = { path = "../machine-a-tron" }
carbide-utils = { path = "../utils", features = ["sqlx"] }
carbide-api-test-helper = { path = "../api-test-helper" }
bmc-mock = { path = "../bmc-mock" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
askama_escape = { workspace = true }
ctor = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
temp-dir = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
#these are alphabetized

[lints]
workspace = true
