#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-rpc"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rpc"

[features]
sqlx = ["dep:sqlx"]
cli = ["dep:clap", "dep:prettytable-rs", "dep:serde_yaml", "dep:csv"]

[dependencies]

# [local-dependencies]
carbide-http-connector = { path = "../http-connector" }
carbide-tls = { path = "../tls" }
carbide-health-report = { path = "../health-report" }
tonic-client-wrapper = { path = "../tonic-client-wrapper", default-features = false }
dns-record = { path = "../dns-record" }
carbide-uuid = { path = "../uuid" }

chrono = { features = ["serde"], workspace = true }
eyre = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true, features = ["http2"] }
hyper-util = { features = [
  "server",
  "http1",
  "http2",
  "tokio",
  "client",
  "client-legacy",
], workspace = true }
mac_address = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { features = ["sync"], workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }
x509-parser = { workspace = true }
log = { workspace = true }
hickory-resolver = { workspace = true }
resolv-conf = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tonic-prost = { workspace = true }
tonic-prost-build = { workspace = true }
tryhard = { workspace = true }
rustls = { workspace = true }
async-trait = { workspace = true }
nonempty = { workspace = true }
clap = { features = ["derive"], optional = true, workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
], optional = true }
prettytable-rs = { optional = true, default-features = false, features = [
  "csv",
], workspace = true }
serde_yaml = { optional = true, workspace = true }
data-encoding = { workspace = true }
sha2 = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
csv = { optional = true, workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
tonic-client-wrapper = { path = "../tonic-client-wrapper" }

[lints]
workspace = true
