#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-ssh-console-mock-api-server"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# TODO: rename to carbide_ssh_console_mock_api_server in source
name = "ssh_console_mock_api_server"

[dependencies]

# local dependencies
carbide-version = { path = "../version" }
carbide-api-test-helper = { path = "../api-test-helper" }
carbide-rpc = { path = "../rpc" }
carbide-uuid = { path = "../uuid" }

tonic = { features = ["tls-ring"], workspace = true }
tonic-prost = { workspace = true }
tonic-prost-build = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { features = ["macros"], workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[build-dependencies]
carbide-version = { path = "../version" }
tonic-prost-build = "0.14"
